package strategypattern.flybehaviors;

/**
 * Created by Alex on 1/24/2016.
 */
public interface FlyBehavior {
    public void fly();
}
