package strategypattern.quackbehaviors;

/**
 * Created by Alex on 1/24/2016.
 */
public interface QuackBehavior {
    public void quack();
}
